--- a/lib/lvexamples_web/templates/layout/events_self.html.leex
+++ b/lib/lvexamples_web/templates/layout/events_self.html.leex
@@ -1,3 +1,4 @@
 <div class="text-center mt-24 text-8xl">
     <%= live_component @socket, LvexamplesWeb.Live.Components.EventsSelf, id: "events-self", counter: @counter %>
+    <%= #live_component @socket, LvexamplesWeb.Live.Components.EventsSelf, id: "events-self2", counter: @counter %>
 </div>
