--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -4,6 +4,58 @@
 @tailwind utilities;
 
 /* LiveView specific classes for your customizations */
+.date_picker {
+  @apply relative z-50;
+
+  h1 {
+    @apply text-base leading-6;
+
+    button {
+      @apply text-purple-700;
+    }
+  }
+
+  .calendar {
+    @apply bg-white rounded-lg p-4 shadow-lg absolute top-6 left-28;
+
+    .month {
+      @apply text-center text-gray-900 text-xs pb-2;
+    }
+
+    .previous_month {
+      @apply absolute top-5 left-7;
+    }
+
+    .next_month {
+      @apply absolute top-5 right-7;
+    }
+
+    .dow {
+      @apply text-xs text-gray-500;
+
+      li {
+        @apply float-left block w-5 h-5 leading-5 text-center;
+      }
+    }
+
+    .week {
+      @apply text-sm text-gray-900;
+
+      li {
+        @apply float-left block w-5 h-5 leading-5 text-center rounded-sm;
+
+        &[aria-current="date"] {
+          @apply bg-purple-100;
+        }
+
+        button:disabled {
+          @apply opacity-100;
+        }
+      }
+    }
+  }
+}
+
 .phx-no-feedback.invalid-feedback,
 .phx-no-feedback .invalid-feedback {
   display: none;
